[package]
name = "mev-inspect"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2021"

[dependencies]
ethers = { version = "2.0.4", default-features = false }
ethers-core = { version = "2.0.4", default-features = false }
ethers-contract = { version = "2.0.4", default-features = false }
ethers-contract-abigen = { version = "2.0.4", default-features = false }
ethers-providers = { version = "2.0.4", default-features = false }
ethers-signers = { version = "2.0.4", default-features = false }
ethers-middleware = { version = "2.0.4", default-features = false }
ethers-etherscan = { version = "2.0.4", default-features = false }
ethers-solc = { version = "2.0.4", default-features = false }
once_cell = "1.17.2"
serde_json = "1.0.96"

thiserror = "1.0.40"
anyhow = "1.0.71"
async-trait = "0.1.68"
futures = "0.3"
serde = "1.0.163"
rust_decimal = { version = "1.29.1", features = [
  "db-postgres",
  "db-tokio-postgres",
] }


tokio-postgres = "0.7.8"
itertools = "0.10.5"
log = "0.4.18"
hex = "0.4.3"

tokio = { version = "1.28.2", features = ["full"] }

gumdrop = "0.8.1"
pretty_env_logger = "0.5.0"
env_logger = "0.10"